# src/CSharp/EasyMicroservices.ProfilesMicroservice.Clients/Connected Services/ProfilesGeneratedServices/OpenAPI.nswag.json
@@ -15,17 +15,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/AddProfileRequestContract"
+                "$ref": "#/components/schemas/ProfileContract"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/AddProfileRequestContract"
+                "$ref": "#/components/schemas/ProfileContract"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/AddProfileRequestContract"
+                "$ref": "#/components/schemas/ProfileContract"
               }
             }
           }
@@ -64,17 +64,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateProfileRequestContract"
+                "$ref": "#/components/schemas/ProfileContract"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateProfileRequestContract"
+                "$ref": "#/components/schemas/ProfileContract"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateProfileRequestContract"
+                "$ref": "#/components/schemas/ProfileContract"
               }
             }
           }
@@ -430,24 +430,6 @@
   },
   "components": {
     "schemas": {
-      "AddProfileRequestContract": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "firstName": {
-            "type": "string",
-            "nullable": true
-          },
-          "lastName": {
-            "type": "string",
-            "nullable": true
-          },
-          "uniqueIdentity": {
-            "type": "string",
-            "nullable": true
-          }
-        }
-      },
       "ErrorContract": {
         "type": "object",
         "additionalProperties": false,
@@ -689,6 +671,28 @@
           }
         }
       },
+      "ProfileContract": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "firstName": {
+            "type": "string",
+            "nullable": true
+          },
+          "lastName": {
+            "type": "string",
+            "nullable": true
+          },
+          "uniqueIdentity": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
       "ProfileResponseContract": {
         "type": "object",
         "additionalProperties": false,
@@ -802,28 +806,6 @@
           "endUserMessage": {
             "type": "string",
             "nullable": true
-          }
-        }
-      },
-      "UpdateProfileRequestContract": {
-        "type": "object",
-        "additionalProperties": false,
-        "properties": {
-          "firstName": {
-            "type": "string",
-            "nullable": true
-          },
-          "lastName": {
-            "type": "string",
-            "nullable": true
-          },
-          "uniqueIdentity": {
-            "type": "string",
-            "nullable": true
-          },
-          "id": {
-            "type": "integer",
-            "format": "int64"
           }
         }
       },
